--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
-.flex {
+#randCon {
+    width: 100vm;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-}
-
-#photos {
-    display: flex;
     justify-content: space-around;
-}
-#photos img{
-    width: 45vw;
 }
 
 button {
     border-radius: 25vw;
     background-color: black;
     color: white;
-    width: 10vw;
-    height: 5vw;
+    width: 25vw;
+    height: 10vw;
+    font-size: 2.5vw;
 }
 
+#photos {
+    display: flex;
+    justify-content: space-around;
+}
+
+img{
+    width: 45vw;
+}
