border-radius: 55px;

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 button {
-    border-radius: 20vw;
+    border-radius: 55px;
     background-color: #474747;
     color: white;
     width: 25vw;
