--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #randCon {
-    width: 100vm;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -18,11 +18,12 @@ button:hover {
     background-color: #4747478e;
 }  
 
-#photos {
+#photo-con {
     display: flex;
     justify-content: space-around;
 }
 
-img{
+img {
     width: 45vw;
+    border: 1px solid black;
 }
